--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-326.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇫🇷 法国-317.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-364.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-302.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-225.0KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇰🇷 韩国-322.5KB/s(Youtube:不良林), server: chess.magicefire.com, port: 443, type: vmess, uuid: 9aa80017-3427-4165-a522-f5f9a11330d0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-694.1KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇯🇵 日本-260.6KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12003, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
   - {name: 🇨🇳 中国-774.5KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-317.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-364.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-218.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-213.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-208.9KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-863.9KB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇳 中国-382.3KB/s(Youtube:不良林), server: 36.134.156.5, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-306.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-326.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-317.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-364.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-302.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-225.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-322.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-694.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-260.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-774.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-317.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-218.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-213.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-208.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-863.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-326.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-317.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-364.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-302.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-225.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-322.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-694.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-260.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-774.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-317.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-218.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-213.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-208.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-863.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-326.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-317.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-364.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-302.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-225.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-322.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-694.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-260.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-774.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-317.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-218.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-213.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-208.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-863.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-326.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-317.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-364.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-302.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-225.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-322.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-694.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-260.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-774.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-317.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-218.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-213.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-208.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-863.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-326.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-317.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-364.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-302.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-225.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-322.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-694.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-260.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-774.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-317.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-218.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-213.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-208.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-863.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-326.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-317.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-364.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-302.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-225.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-322.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-694.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-260.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-774.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-317.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-218.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-213.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-208.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-863.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-326.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-317.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-364.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-302.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-225.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-322.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-694.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-260.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-774.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-317.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-218.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-213.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-208.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-863.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
