--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-344.9KB/s(Youtube:不良林), server: 36.134.156.5, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇮🇹 意大利-347.5KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
-  - {name: 🇯🇵 日本-260.6KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12003, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-776.8KB/s(Youtube:不良林), server: 85.208.108.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-213.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-306.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-946.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-520.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-440.8KB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-463.3KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-334.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇬🇧 英国-634.5KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-840.5KB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-580.8KB/s(Youtube:不良林), server: 85.208.108.19, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-2.60MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-419.2KB/s(Youtube:不良林), server: node-jp-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-jp-c-01.texo.network, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.70MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
+  - {name: 🇺🇸 美国-587.7KB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-315.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-459.9KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-344.9KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-347.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-260.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-776.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-213.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-946.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-440.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-463.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-634.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-840.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-580.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-419.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-587.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-315.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-344.9KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-347.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-260.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-776.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-213.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-946.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-440.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-463.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-634.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-840.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-580.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-419.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-587.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-315.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-344.9KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-347.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-260.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-776.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-213.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-946.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-440.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-463.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-634.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-840.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-580.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-419.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-587.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-315.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-344.9KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-347.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-260.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-776.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-213.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-946.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-440.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-463.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-634.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-840.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-580.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-419.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-587.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-315.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-344.9KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-347.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-260.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-776.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-213.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-946.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-440.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-463.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-634.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-840.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-580.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-419.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-587.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-315.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-344.9KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-347.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-260.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-776.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-213.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-946.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-440.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-463.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-634.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-840.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-580.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-419.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-587.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-315.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-344.9KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-347.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-260.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-776.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-213.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-946.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-440.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-463.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-634.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-840.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-580.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-419.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-587.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-315.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
