--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-334.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇬🇧 英国-634.5KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-840.5KB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-580.8KB/s(Youtube:不良林), server: 85.208.108.19, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-2.60MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-419.2KB/s(Youtube:不良林), server: node-jp-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-jp-c-01.texo.network, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.70MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
-  - {name: 🇺🇸 美国-587.7KB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇫🇷 法国-315.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-459.9KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-776.8KB/s(Youtube:不良林), server: 85.208.108.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-463.3KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-208.9KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-334.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-302.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.55MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-427.1KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12003, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-670.4KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-315.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-634.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-840.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-580.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-419.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-587.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-315.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-776.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-463.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-208.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-302.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-427.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-670.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-315.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-634.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-840.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-580.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-419.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-587.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-315.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-776.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-463.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-208.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-302.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-427.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-670.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-315.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,15 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-634.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-840.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-580.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-419.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-587.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-315.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-776.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-463.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-208.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-302.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-427.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-670.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-315.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,30 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-634.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-840.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-580.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-419.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-587.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-315.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-776.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-463.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-208.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-302.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-427.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-670.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-315.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-634.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-840.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-580.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-419.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-587.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-315.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-776.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-463.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-208.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-302.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-427.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-670.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-315.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-634.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-840.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-580.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-419.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-587.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-315.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-776.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-463.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-208.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-302.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-427.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-670.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-315.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-634.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-840.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-580.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-419.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-587.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-315.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-776.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-463.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-208.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-302.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-427.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-670.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-315.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
