--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-334.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇯🇵 日本-776.8KB/s(Youtube:不良林), server: 85.208.108.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-463.3KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-208.9KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-334.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-302.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-2.55MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-304.8KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-301.7KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-315.7KB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-327.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-427.1KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12003, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-670.4KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-315.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-374.0KB/s(Youtube:不良林), server: cm01.db-link.in, port: 13302, type: vmess, uuid: c4fa06ca-c18f-37a4-ba0e-63537c0fb672, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /db, ws-headers: {Host: cm01.db-link.in}}
+  - {name: 🇨🇳 中国-342.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-451.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.29MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-418.0KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-776.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-463.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-208.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-302.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-301.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-327.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-427.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-670.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-315.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-418.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-776.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-463.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-208.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-302.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-301.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-327.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-427.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-670.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-315.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-418.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-776.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-463.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-208.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-302.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-301.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-327.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-427.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-670.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-315.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-418.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-776.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-463.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-208.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-302.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-301.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-327.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-427.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-670.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-315.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-418.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-776.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-463.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-208.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-302.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-301.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-327.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-427.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-670.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-315.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-418.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-776.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-463.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-208.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-302.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-301.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-327.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-427.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-670.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-315.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-418.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-776.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-463.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-208.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-302.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-301.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-327.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-427.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-670.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-315.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-418.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
